Prevent to OverflowY vol2

--- a/cv/src/index.css
+++ b/cv/src/index.css
@@ -32,13 +32,19 @@ h1 {
   font-size: 2rem;
   margin-bottom: 50px;
 }
-
+html {
+  background: var(--body-bacground);
+}
 body {
   /* background-color: var(--body-color); */
   background: var(--body-bacground);
   /* overflow-x: hidden; */
   position: relative;
   /* overflow-y: hidden; */
+  overscroll-behavior: contain; /* Prevents the overscroll bounce effect */
+  /* margin: 0; */
+  /* padding: 0; */
+  min-height: 100vh;
 }
 
 section {
